--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <ul>
     <a href="https://nrmarimox.github.io/-/"><li>works</li></a>
     <a href="https://nrmarimox.github.io/portforio.2023/"><li>skills</li></a>
-    <a href=""><li>contact</li></a>
+    <a href="https://nrmarimox.github.io/contact/"><li>contact</li></a>
   </ul>
 </div>
 </header>
