--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <header>
     <div class="menu">
             <ul>
-                <a href="https://nrmarimox.github.io/-/"><li>works</li></a>
+                <a href="https://nrmarimox.github.io/works/"><li>works</li></a>
                  <a href="https://nrmarimox.github.io/portforio.2023/"><li>skills</li></a>
                     <a href="https://nrmarimox.github.io/contact/"><li>contact</li></a>
         </ul>
