--- a/index.html
+++ b/index.html
@@ -4,34 +4,46 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    
-<link href="portfolio.css" rel="stylesheet">
+   
+    <link href="portfolio.css" rel="stylesheet">
   
-<title>my portfolio</title>
+    <title>my portfolio</title>
 </head>
 <body>
 <header>
+     <button type="button" class="menu-btn">
+        <i class="fa fa-bars" aria-hidden="true">=</i>
+     </button>
+    <div class="humberger-menu">
+        <div class="menu__item"> <a href="https://nrmarimox.github.io/-/"><li>works</li></a></div>
+            <div class="menu__item"><a href="https://nrmarimox.github.io/portforio.2023/"><li>skills</li></a></div>
+            <div class="menu__item"> <a href="https://nrmarimox.github.io/contact/"><li>contact</li></a></div>
+      </div>
+    </div>
+
+
+
     <div class="menu">
             <ul>
-                <a href="https://nrmarimox.github.io/works/"><li>works</li></a>
+                <a href="https://nrmarimox.github.io/-/"><li>works</li></a>
                  <a href="https://nrmarimox.github.io/portforio.2023/"><li>skills</li></a>
                     <a href="https://nrmarimox.github.io/contact/"><li>contact</li></a>
         </ul>
-</div>
+    </div>
 </header>
 
+
+
 <div class="content">
-<div class="content-title">
+    <div class="content-title">
 
-<div class="title">
-    <h1>marino shimada</h1> 
-</div>
-<div class="subtitle">
-    <h2>-This is my portfolio site!!-</h2>
-</div>
-</div>
-
-
+            <div class="title">
+                 <h1>marino shimada</h1> 
+            </div>
+             <div class="subtitle">
+                <h2>-This is my portfolio site!!-</h2>
+             </div>
+    </div>
 </div>
 
 <footer>
@@ -41,6 +53,8 @@
 </footer>
 
 
+<script src="portforio.js">
+</script>
 
 
 
