--- a/index.html
+++ b/index.html
@@ -53,7 +53,10 @@
 </footer>
 
 
-<script src="portforio.js">
+<script>
+    document.querySelector(".menu-btn").addEventListener("click", function () {
+	document.querySelector(".humberger-menu").classList.toggle("is-active");
+  });
 </script>
 
 
