--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <i class="fa fa-bars" aria-hidden="true">=</i>
      </button>
     <div class="humberger-menu">
-        <div class="menu__item"> <a href="https://nrmarimox.github.io/-/"><li>works</li></a></div>
+        <div class="menu__item"> <a href="https://nrmarimox.github.io/works/"><li>works</li></a></div>
             <div class="menu__item"><a href="https://nrmarimox.github.io/portforio.2023/"><li>skills</li></a></div>
             <div class="menu__item"> <a href="https://nrmarimox.github.io/contact/"><li>contact</li></a></div>
       </div>
@@ -25,7 +25,7 @@
 
     <div class="menu">
             <ul>
-                <a href="https://nrmarimox.github.io/-/"><li>works</li></a>
+                <a href="https://nrmarimox.github.io/works/"><li>works</li></a>
                  <a href="https://nrmarimox.github.io/portforio.2023/"><li>skills</li></a>
                     <a href="https://nrmarimox.github.io/contact/"><li>contact</li></a>
         </ul>
